<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

    <ImageView
            android:src="@drawable/chicago"
            android:layout_width="150dp"
            android:layout_height="150dp" android:id="@+id/chicagoPizzaImage"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_of_chicago_pizza"
            app:layout_constraintBottom_toTopOf="@+id/chicagoPizzaButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nyPizzaImage"
            android:layout_marginEnd="15dp" android:layout_marginTop="138dp"
            android:layout_marginStart="30dp" android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/make_chicago_pizza_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/chicagoPizzaButton"
            app:layout_constraintTop_toBottomOf="@+id/chicagoPizzaImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nyPizzaButton"
            android:layout_marginStart="42dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/currentOrderImage"
            android:layout_marginTop="4dp"/>
    <ImageView
            android:src="@drawable/ny_pizza"
            android:layout_width="150dp"
            android:layout_height="150dp" android:id="@+id/nyPizzaImage"
            android:contentDescription="@string/image_of_ny_pizza"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nyPizzaButton"
            app:layout_constraintVertical_bias="0.531" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chicagoPizzaImage"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="15dp" android:layout_marginTop="138dp"
            android:layout_marginEnd="30dp"/>
    <Button
            android:text="@string/make_ny_pizza_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nyPizzaButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/nyPizzaImage"
            app:layout_constraintStart_toEndOf="@+id/chicagoPizzaButton"
            app:layout_constraintHorizontal_bias="0.544" android:layout_marginEnd="42dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/storeOrderImage"/>
    <ImageView
            android:src="@drawable/current_order"
            android:layout_width="150dp"
            android:layout_height="150dp" android:id="@+id/currentOrderImage"
            android:contentDescription="@string/image_of_shopping_cart"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/currentOrderButton"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/chicagoPizzaButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toStartOf="@+id/storeOrderImage"
            android:layout_marginEnd="15dp"/>
    <Button
            android:text="@string/current_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/currentOrderButton"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderImage"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="130dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toStartOf="@+id/storeOrderButton"
            android:layout_marginEnd="15dp"/>
    <ImageView
            android:src="@drawable/store_orders"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/nyPizzaButton"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/storeOrderButton"
            android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/currentOrderImage"
            android:id="@+id/storeOrderImage" android:contentDescription="@string/image_of_store"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/store_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/storeOrderButton"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="130dp"
            android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/currentOrderButton"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/storeOrderImage"/>
</androidx.constraintlayout.widget.ConstraintLayout>